--- a/car_product/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/car_product/overlay/frameworks/base/core/res/res/values/config.xml
@@ -211,4 +211,7 @@
     <!-- Disable the "Share" action item shown in the context menu that appears upon long-pressing
         on selected text. -->
     <bool name="config_textShareSupported">false</bool>
+
+    <!-- Make sure that auto-suspend mode is not used. -->
+    <bool name="config_useAutoSuspend">false</bool>
 </resources>
