Disable app blocking activity feature for RB
Bug: 329141535
Test: Manual

Change-Id: I6232c5bb591b539714a10f6097e639a3cc49dede

--- a/car_product/car_ui_portrait/apps/CarUiPortraitSystemUI/res/values/config.xml
+++ b/car_product/car_ui_portrait/apps/CarUiPortraitSystemUI/res/values/config.xml
@@ -65,4 +65,7 @@
     <string name="config_VoiceAssistantActivity" translatable="false">
         com.google.android.carassistant/com.google.android.apps.gsa.binaries.auto.app.voiceplate.VoicePlateActivity
     </string>
+
+    <!-- Blocking activity feature flag -->
+    <bool name="config_enableAppBlockingActivities">false</bool>
 </resources>
