--- a/car_product/distant_display/apps/CarDistantDisplaySystemUI/res/layout/car_distant_display_navigation_wallpaper_activity.xml
+++ b/car_product/distant_display/apps/CarDistantDisplaySystemUI/res/layout/car_distant_display_navigation_wallpaper_activity.xml
@@ -26,7 +26,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:text="CERAMIC SPACE"
+        android:text="PLACEHOLDER"
         android:textSize="64sp"
         app:layout_constraintVertical_chainStyle="packed"
         app:layout_constraintStart_toStartOf="parent"
