Disable background audio NDO apps while driving on RB
Disable feature on car-ui-portrait systems since audio controls are
always available.

Bug: 322009680
Test: Manual on gcar and gcar_cw emulators
Change-Id: I76bc8abf0080f59782daf49ba36a283e6b30aa6b

--- a/car_product/car_ui_portrait/apps/CarUiPortraitLauncher/res/values/config.xml
+++ b/car_product/car_ui_portrait/apps/CarUiPortraitLauncher/res/values/config.xml
@@ -99,4 +99,11 @@
         <item>android.server.wm.cts/android.server.wm.ActivityTransitionTests$TransitionActivity</item>
         <!-- END -->
     </string-array>
+
+    <!--
+        Config for allowing NDO apps to be opened while driving if they contain an active media
+        session
+        TODO(b/310687870): Add RB to testing plan
+    -->
+    <bool name="config_enableMediaSessionAppsWhileDriving">false</bool>
 </resources>
