Add choice dialog before starting bug reporting
Show a choice dialog to enable users choose the next action before
starting a default action.

If there is no user response in 5 seconds, it will automatically start a
default first action. The action is one of AUDIO_FIRST and AUDIO_LATER.

It can be triggered by
com.android.car.bugreport.action.START_BUG_REPORT action.

Bug: 301369131
Test: Run `adb shell am start -a com.android.car.bugreport.action.START_BUG_REPORT`
Change-Id: I063dc18157d870526493aa073382f10667ffafe4
(cherry picked from commit 40159131a5d1e1e21531f8f01aa4bf4cd5809b78)

--- a/tests/BugReportApp/res/values/styles.xml
+++ b/tests/BugReportApp/res/values/styles.xml
@@ -21,6 +21,10 @@
     <item name="android:clickable">true</item>
   </style>
 
+  <style name="transparent_button" parent="standard_button">
+    <item name="android:background">@null</item>
+  </style>
+
   <style name="Widget.BugReportUi.InfoActionButton" parent="android:Widget.DeviceDefault.Button">
     <item name="android:textSize">@dimen/bug_report_button_text_size</item>
   </style>
@@ -32,5 +36,10 @@
   <style name="TextAppearance.BugReportUi.Body" parent="android:TextAppearance.DeviceDefault">
     <item name="android:textColor">?android:attr/textColorPrimary</item>
     <item name="android:textSize">@dimen/bug_report_small_text_size</item>
+  </style>
+
+  <style
+      name="DialogWithNullBackground" parent="@android:style/Theme.DeviceDefault.Dialog">
+    <item name="android:windowBackground">@null</item>
   </style>
 </resources>
