Add a responsive cluster activity to be used with fancy WM references
Bug: N/A
Test: m
Test: Tried to send insets to this activity from systemui using a custom
      windowing architecture
Change-Id: Idd980e4da4079939ca3d51d97899783be59619b0

--- a/tests/EmbeddedKitchenSinkApp/res/values/styles.xml
+++ b/tests/EmbeddedKitchenSinkApp/res/values/styles.xml
@@ -59,4 +59,12 @@
         <item name="android:checkboxStyle">@style/CheckBoxStyle</item>
         <item name="android:spinnerStyle">@style/SpinnerStyle</item>
     </style>
+
+    <style name="KSDayNightTheme" parent="Theme.AppCompat.DayNight.NoActionBar">
+        <item name="android:textSize">24sp</item>
+        <item name="android:buttonStyle">@style/ButtonStyle</item>
+        <item name="android:radioButtonStyle">@style/RadioButtonStyle</item>
+        <item name="android:checkboxStyle">@style/CheckBoxStyle</item>
+        <item name="android:spinnerStyle">@style/SpinnerStyle</item>
+    </style>
 </resources>
