Control bar album art UI fixes
Bug: 333134372
Test: Manual
Flag: com.android.car.carlauncher.media_card_fullscreen

Change-Id: If2cc0fccc81e4959525d96bb212c88ba2a622baa

--- a/car_product/car_ui_portrait/apps/CarUiPortraitLauncher/res/layout/control_bar_media_card.xml
+++ b/car_product/car_ui_portrait/apps/CarUiPortraitLauncher/res/layout/control_bar_media_card.xml
@@ -256,7 +256,6 @@
             android:layout_height="@dimen/control_bar_media_card_seek_bar_height"
             android:layout_marginBottom="@dimen/media_card_view_separation_margin"
             android:layout_marginEnd="@dimen/control_bar_media_card_view_end_margin"
-            android:clickable="false"
             android:paddingEnd="0dp"
             android:paddingStart="0dp"
             android:progressBackgroundTint="@color/car_on_surface_variant"
@@ -266,6 +265,8 @@
             android:thumb="@drawable/media_card_seekbar_thumb"
             android:thumbTint="@color/car_on_surface"
             android:thumbOffset="0px"
+            android:clickable="true"
+            android:focusable="true"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintBottom_toTopOf="@id/play_pause_button"
             app:layout_constraintEnd_toStartOf="@id/current_time"
