UI fixes after UX review
Bug: 346427057
Test: Manual
Flag: com.android.car.carlauncher.media_card_fullscreen

Change-Id: Ic583173c95e8c778e6a4507c42d84efa1211509d

--- a/car_product/car_ui_portrait/apps/CarUiPortraitLauncher/res/drawable/left_half_pill_button_shape.xml
+++ b/car_product/car_ui_portrait/apps/CarUiPortraitLauncher/res/drawable/left_half_pill_button_shape.xml
@@ -14,9 +14,14 @@
   ~ limitations under the License.
   -->
 
-<shape xmlns:android="http://schemas.android.com/apk/res/android"
-    android:shape="rectangle">
-    <corners android:bottomLeftRadius="@dimen/control_bar_media_card_half_pill_button_radius"
-        android:topLeftRadius="@dimen/control_bar_media_card_half_pill_button_radius" />
-    <solid android:color="@color/car_surface_variant" />
-</shape>
+<layer-list xmlns:android="http://schemas.android.com/apk/res/android">
+    <item>
+        <shape
+            android:shape="rectangle">
+            <corners android:bottomLeftRadius="@dimen/control_bar_media_card_half_pill_button_radius"
+                android:topLeftRadius="@dimen/control_bar_media_card_half_pill_button_radius" />
+            <solid android:color="@color/car_surface_container_highest" />
+        </shape>
+    </item>
+    <item android:drawable="@drawable/button_ripple"/>
+</layer-list>
