--- a/car_product/car_ui_portrait/apps/CarUiPortraitLauncher/res/layout/control_bar_media_history_item.xml
+++ b/car_product/car_ui_portrait/apps/CarUiPortraitLauncher/res/layout/control_bar_media_history_item.xml
@@ -22,7 +22,7 @@
     android:layout_height="match_parent"
     android:layout_gravity="center_horizontal|bottom"
     android:layout_marginEnd="@dimen/media_card_view_separation_margin"
-    app:cardBackgroundColor="@color/car_surface_variant"
+    app:cardBackgroundColor="@color/car_surface_container_highest"
     app:cardCornerRadius="@dimen/control_bar_media_card_item_card_radius"
     app:cardElevation="0dp">
 
@@ -50,7 +50,7 @@
             android:layout_height="0dp"
             android:layout_width="0dp"
             android:textAppearance="@style/TextAppearance.Car.Body.Small"
-            android:textColor="@color/car_on_surface"
+            android:textColor="@color/car_text_primary"
             android:maxLines="3"
             android:ellipsize="end"
             android:layout_marginStart="@dimen/control_bar_media_card_history_item_margin_large"
@@ -65,7 +65,7 @@
             android:layout_height="wrap_content"
             android:layout_width="0dp"
             android:textAppearance="@style/TextAppearance.Car.Body.Small"
-            android:textColor="@color/car_on_surface_variant"
+            android:textColor="@color/car_text_secondary"
             android:maxLines="1"
             android:ellipsize="end"
             android:layout_marginStart="@dimen/control_bar_media_card_history_item_margin_large"
@@ -105,7 +105,7 @@
             android:layout_width="match_parent"
             android:gravity="center"
             android:textAppearance="@style/TextAppearance.Car.Body.Small"
-            android:textColor="@color/car_on_surface"
+            android:textColor="@color/car_text_primary"
             android:maxLines="1"
             android:ellipsize="end"
             android:layout_marginStart="@dimen/control_bar_media_card_history_item_margin_small"
