--- a/car_product/car_ui_portrait/apps/CarUiPortraitLauncher/res/layout/control_bar_media_queue_item.xml
+++ b/car_product/car_ui_portrait/apps/CarUiPortraitLauncher/res/layout/control_bar_media_queue_item.xml
@@ -19,7 +19,7 @@
     android:layout_width="@dimen/control_bar_media_card_queue_item_card_width"
     android:layout_height="match_parent"
     android:layout_gravity="center_horizontal|bottom"
-    app:cardBackgroundColor="@color/car_surface_variant"
+    app:cardBackgroundColor="@color/car_surface_container_highest"
     app:cardCornerRadius="@dimen/control_bar_media_card_item_card_radius"
     app:cardElevation="0dp"
     android:layout_marginEnd="@dimen/media_card_view_separation_margin">
@@ -34,7 +34,7 @@
             android:layout_height="wrap_content"
             android:layout_width="0dp"
             android:textAppearance="@style/TextAppearance.Car.Body.Small"
-            android:textColor="@color/car_on_surface"
+            android:textColor="@color/car_text_primary"
             android:maxLines="1"
             android:ellipsize="end"
             android:layout_marginEnd="@dimen/media_card_view_separation_margin"
@@ -48,7 +48,7 @@
             android:layout_height="wrap_content"
             android:layout_width="0dp"
             android:textAppearance="@style/TextAppearance.Car.Body.Small"
-            android:textColor="@color/car_on_surface_variant"
+            android:textColor="@color/car_text_secondary"
             android:maxLines="1"
             android:ellipsize="end"
             android:layout_marginEnd="@dimen/media_card_view_separation_margin"
@@ -74,7 +74,7 @@
             android:layout_height="wrap_content"
             android:layout_width="wrap_content"
             android:textAppearance="@style/TextAppearance.Car.Body.Small"
-            android:textColor="@color/car_on_surface_variant"
+            android:textColor="@color/car_text_secondary"
             android:maxLines="1"
             android:ellipsize="end"
             app:layout_constraintBottom_toBottomOf="parent"
