--- a/car_product/car_ui_portrait/apps/CarUiPortraitLauncher/res/color/car_surface_container_highest_50.xml
+++ b/car_product/car_ui_portrait/apps/CarUiPortraitLauncher/res/color/car_surface_container_highest_50.xml
@@ -15,10 +15,5 @@
   -->
 
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:color="@color/car_surface_container_highest"
-        android:state_selected="true" android:state_enabled="true"/>
-    <item android:color="@color/car_on_surface_variant"
-        android:state_selected="false" android:state_enabled="true"/>
-    <item android:color="@color/car_surface_50"
-        android:state_enabled="false"/>
+    <item android:alpha="0.5" android:color="@color/car_surface_container_highest" />
 </selector>
