--- a/car_product/car_ui_portrait/apps/CarUiPortraitLauncher/res/drawable/right_half_pill_button_shape.xml
+++ b/car_product/car_ui_portrait/apps/CarUiPortraitLauncher/res/drawable/right_half_pill_button_shape.xml
@@ -14,10 +14,15 @@
   ~ limitations under the License.
   -->
 
-<shape xmlns:android="http://schemas.android.com/apk/res/android"
-    android:shape="rectangle">
-    <corners
-        android:bottomRightRadius="@dimen/control_bar_media_card_half_pill_button_radius"
-        android:topRightRadius="@dimen/control_bar_media_card_half_pill_button_radius" />
-    <solid android:color="@color/car_surface_variant" />
-</shape>
+<layer-list xmlns:android="http://schemas.android.com/apk/res/android">
+    <item>
+        <shape
+            android:shape="rectangle">
+            <corners
+                android:bottomRightRadius="@dimen/control_bar_media_card_half_pill_button_radius"
+                android:topRightRadius="@dimen/control_bar_media_card_half_pill_button_radius" />
+            <solid android:color="@color/car_surface_container_highest" />
+        </shape>
+    </item>
+    <item android:drawable="@drawable/button_ripple"/>
+</layer-list>
