Fix RB HVAC fan slider in RtL
Bug: 339488933
Test: Manual
Flag: EXEMPT resource only update

Change-Id: I995779bac200ae80ca08a205f2db2aa22a777098

--- a/car_product/car_ui_portrait/apps/CarUiPortraitSystemUI/res/drawable/fan_speed_seek_bar_background.xml
+++ b/car_product/car_ui_portrait/apps/CarUiPortraitSystemUI/res/drawable/fan_speed_seek_bar_background.xml
@@ -22,7 +22,7 @@
         </shape>
     </item>
     <item
-        android:gravity="left"
+        android:gravity="start"
         android:width="@dimen/hvac_panel_button_dimen">
         <selector>
             <item android:state_selected="true">
