Add custom action overflow animation
Bug: 347735793
Test: Manual
Flag: com.android.car.carlauncher.media_card_fullscreen

Change-Id: I26d73f1d901ac5d86de80cbb3d712e83b1014061

--- a/car_product/car_ui_portrait/apps/CarUiPortraitLauncher/res/layout/control_bar_media_card.xml
+++ b/car_product/car_ui_portrait/apps/CarUiPortraitLauncher/res/layout/control_bar_media_card.xml
@@ -31,6 +31,173 @@
         android:padding="@dimen/control_bar_media_card_padding"
         app:layoutDescription="@xml/control_bar_media_card_queue_history_motion_scene">
 
+        <ImageView
+            android:id="@+id/media_widget_app_icon"
+            android:layout_width="@dimen/control_bar_media_card_app_icon_size"
+            android:layout_height="@dimen/control_bar_media_card_app_icon_size"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <ImageView
+            android:id="@+id/album_art"
+            android:layout_width="@dimen/control_bar_media_card_album_art_size"
+            android:layout_height="@dimen/control_bar_media_card_album_art_size"
+            android:background="@drawable/radius_24_background"
+            android:clipToOutline="true"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <androidx.constraintlayout.widget.Guideline
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/guideline"
+            app:layout_constraintGuide_end="@dimen/control_bar_media_card_album_art_size"
+            android:orientation="vertical"/>
+
+        <com.android.car.media.common.ContentFormatView
+            android:id="@+id/content_format"
+            android:layout_width="@dimen/control_bar_media_card_custom_action_size"
+            android:layout_height="@dimen/control_bar_media_card_custom_action_size"
+            android:background="@android:color/transparent"
+            android:layout_marginTop="@dimen/control_bar_media_card_view_separation_margin"
+            android:layout_marginEnd="@dimen/control_bar_media_card_view_end_margin"
+            app:logoSize="small"
+            app:logoTint="@color/car_on_surface"
+            app:layout_constraintTop_toBottomOf="@id/title"
+            app:layout_constraintEnd_toStartOf="@id/guideline" />
+
+        <LinearLayout
+            android:id="@+id/custom_action_overflow_container"
+            android:layout_width="wrap_content"
+            android:layout_height="@dimen/media_card_large_button_size"
+            android:layout_marginEnd="@dimen/control_bar_media_card_view_end_margin"
+            android:layout_marginStart="@dimen/media_card_view_separation_margin"
+            android:paddingHorizontal="@dimen/control_bar_media_card_custom_action_layout_horizontal_padding"
+            android:background="@drawable/pill_button_shape"
+            android:backgroundTint="@color/car_on_surface_variant"
+            android:visibility="gone"
+            app:layout_constraintBottom_toBottomOf="@id/play_pause_button"
+            app:layout_constraintStart_toEndOf="@id/playback_action_id2"
+            app:layout_constraintEnd_toStartOf="@id/queue_button"
+            app:layout_constraintTop_toTopOf="@id/play_pause_button"
+            app:layout_constraintHorizontal_bias="1">
+
+            <ImageButton
+                android:id="@+id/playback_action_id9"
+                android:layout_width="@dimen/control_bar_media_card_custom_action_size"
+                android:layout_height="@dimen/control_bar_media_card_custom_action_size"
+                android:layout_gravity="center_vertical"
+                style="@style/ControlBarCustomActionOverflowStyle"/>
+
+            <ImageButton
+                android:id="@+id/playback_action_id10"
+                android:layout_width="@dimen/control_bar_media_card_custom_action_size"
+                android:layout_height="@dimen/control_bar_media_card_custom_action_size"
+                android:layout_gravity="center_vertical"
+                style="@style/ControlBarCustomActionOverflowStyle"
+                android:layout_marginStart="@dimen/control_bar_media_card_custom_action_spacing" />
+
+            <ImageButton
+                android:id="@+id/playback_action_id11"
+                android:layout_width="@dimen/control_bar_media_card_custom_action_size"
+                android:layout_height="@dimen/control_bar_media_card_custom_action_size"
+                android:layout_gravity="center_vertical"
+                style="@style/ControlBarCustomActionOverflowStyle"
+                android:layout_marginStart="@dimen/control_bar_media_card_custom_action_spacing" />
+
+            <ImageButton
+                android:id="@+id/overflow_exit_button"
+                android:layout_width="@dimen/control_bar_media_card_custom_action_size"
+                android:layout_height="@dimen/control_bar_media_card_custom_action_size"
+                android:layout_gravity="center_vertical"
+                style="@style/ControlBarOverflowExitButtonStyle"
+                android:layout_marginStart="@dimen/control_bar_media_card_custom_action_spacing"
+                android:src="@drawable/ic_cancel" />
+        </LinearLayout>
+
+        <View
+            android:id="@+id/custom_action_overflow_conceal_container"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/media_card_large_button_size"
+            android:paddingHorizontal="@dimen/control_bar_media_card_custom_action_layout_horizontal_padding"
+            android:background="@drawable/custom_action_overflow_conceal_background"
+            app:layout_constraintBottom_toBottomOf="@id/play_pause_button"
+            app:layout_constraintStart_toStartOf="@id/custom_action_overflow_container"
+            app:layout_constraintEnd_toEndOf="@id/guideline"
+            app:layout_constraintTop_toTopOf="@id/playback_action_id2"
+            app:layout_constraintHorizontal_bias="1"
+            app:layout_constrainedWidth="true"/>
+
+        <LinearLayout
+            android:id="@+id/custom_action_container"
+            android:layout_width="wrap_content"
+            android:layout_height="@dimen/media_card_large_button_size"
+            android:layout_marginEnd="@dimen/control_bar_media_card_view_end_margin"
+            android:layout_marginStart="@dimen/media_card_view_separation_margin"
+            android:paddingHorizontal="@dimen/control_bar_media_card_custom_action_layout_horizontal_padding"
+            app:layout_constraintBottom_toBottomOf="@id/play_pause_button"
+            app:layout_constraintStart_toEndOf="@id/playback_action_id2"
+            app:layout_constraintEnd_toStartOf="@id/queue_button"
+            app:layout_constraintTop_toTopOf="@id/play_pause_button"
+            app:layout_constraintHorizontal_bias="1">
+
+            <ImageButton
+                android:id="@+id/playback_action_id3"
+                android:layout_width="@dimen/control_bar_media_card_custom_action_size"
+                android:layout_height="@dimen/control_bar_media_card_custom_action_size"
+                android:layout_gravity="center_vertical"
+                style="@style/ControlBarCustomActionStyle" />
+
+            <ImageButton
+                android:id="@+id/playback_action_id4"
+                android:layout_width="@dimen/control_bar_media_card_custom_action_size"
+                android:layout_height="@dimen/control_bar_media_card_custom_action_size"
+                android:layout_gravity="center_vertical"
+                style="@style/ControlBarCustomActionStyle"
+                android:layout_marginStart="@dimen/control_bar_media_card_custom_action_spacing"/>
+
+            <ImageButton
+                android:id="@+id/playback_action_id5"
+                android:layout_width="@dimen/control_bar_media_card_custom_action_size"
+                android:layout_height="@dimen/control_bar_media_card_custom_action_size"
+                android:layout_gravity="center_vertical"
+                style="@style/ControlBarCustomActionStyle"
+                android:layout_marginStart="@dimen/control_bar_media_card_custom_action_spacing"/>
+
+            <ImageButton
+                android:id="@+id/playback_action_id6"
+                android:layout_width="@dimen/control_bar_media_card_custom_action_size"
+                android:layout_height="@dimen/control_bar_media_card_custom_action_size"
+                android:layout_gravity="center_vertical"
+                style="@style/ControlBarCustomActionStyle"
+                android:layout_marginStart="@dimen/control_bar_media_card_custom_action_spacing"/>
+
+            <ImageButton
+                android:id="@+id/playback_action_id7"
+                android:layout_width="@dimen/control_bar_media_card_custom_action_size"
+                android:layout_height="@dimen/control_bar_media_card_custom_action_size"
+                android:layout_gravity="center_vertical"
+                style="@style/ControlBarCustomActionStyle"
+                android:layout_marginStart="@dimen/control_bar_media_card_custom_action_spacing"/>
+
+            <ImageButton
+                android:id="@+id/playback_action_id8"
+                android:layout_width="@dimen/control_bar_media_card_custom_action_size"
+                android:layout_height="@dimen/control_bar_media_card_custom_action_size"
+                android:layout_gravity="center_vertical"
+                style="@style/ControlBarCustomActionStyle"
+                android:layout_marginStart="@dimen/control_bar_media_card_custom_action_spacing"/>
+
+            <ImageButton
+                android:id="@+id/overflow_button"
+                android:layout_width="@dimen/control_bar_media_card_custom_action_size"
+                android:layout_height="@dimen/control_bar_media_card_custom_action_size"
+                android:layout_gravity="center_vertical"
+                style="@style/ControlBarOverflowButtonStyle"
+                android:layout_marginStart="@dimen/control_bar_media_card_custom_action_spacing"
+                android:src="@drawable/ic_overflow_horizontal" />
+        </LinearLayout>
+
         <ImageButton
             android:id="@+id/play_pause_button"
             android:layout_width="@dimen/control_bar_media_card_pill_button_width"
@@ -95,162 +262,6 @@
             android:backgroundTint="@color/control_bar_media_card_panel_button_background"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintBottom_toBottomOf="parent" />
-
-        <ImageView
-            android:id="@+id/media_widget_app_icon"
-            android:layout_width="@dimen/control_bar_media_card_app_icon_size"
-            android:layout_height="@dimen/control_bar_media_card_app_icon_size"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-
-        <ImageView
-            android:id="@+id/album_art"
-            android:layout_width="@dimen/control_bar_media_card_album_art_size"
-            android:layout_height="@dimen/control_bar_media_card_album_art_size"
-            android:background="@drawable/radius_24_background"
-            android:clipToOutline="true"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-
-        <androidx.constraintlayout.widget.Guideline
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/guideline"
-            app:layout_constraintGuide_end="@dimen/control_bar_media_card_album_art_size"
-            android:orientation="vertical"/>
-
-        <com.android.car.media.common.ContentFormatView
-            android:id="@+id/content_format"
-            android:layout_width="@dimen/control_bar_media_card_custom_action_size"
-            android:layout_height="@dimen/control_bar_media_card_custom_action_size"
-            android:background="@android:color/transparent"
-            android:layout_marginTop="@dimen/control_bar_media_card_view_separation_margin"
-            android:layout_marginEnd="@dimen/control_bar_media_card_view_end_margin"
-            app:logoSize="small"
-            app:logoTint="@color/car_on_surface"
-            app:layout_constraintTop_toBottomOf="@id/title"
-            app:layout_constraintEnd_toStartOf="@id/guideline" />
-
-        <LinearLayout
-            android:id="@+id/custom_action_container"
-            android:layout_width="wrap_content"
-            android:layout_height="@dimen/media_card_large_button_size"
-            android:layout_marginEnd="@dimen/control_bar_media_card_view_end_margin"
-            android:layout_marginStart="@dimen/media_card_view_separation_margin"
-            android:paddingStart="@dimen/control_bar_media_card_custom_action_layout_horizontal_padding"
-            android:paddingEnd="@dimen/control_bar_media_card_custom_action_layout_horizontal_padding"
-            app:layout_constraintBottom_toBottomOf="@id/play_pause_button"
-            app:layout_constraintStart_toEndOf="@id/playback_action_id2"
-            app:layout_constraintEnd_toStartOf="@id/queue_button"
-            app:layout_constraintTop_toTopOf="@id/play_pause_button"
-            app:layout_constraintHorizontal_bias="1">
-
-            <ImageButton
-                android:id="@+id/playback_action_id3"
-                android:layout_width="@dimen/control_bar_media_card_custom_action_size"
-                android:layout_height="@dimen/control_bar_media_card_custom_action_size"
-                android:layout_gravity="center_vertical"
-                style="@style/ControlBarCustomActionStyle" />
-
-            <ImageButton
-                android:id="@+id/playback_action_id4"
-                android:layout_width="@dimen/control_bar_media_card_custom_action_size"
-                android:layout_height="@dimen/control_bar_media_card_custom_action_size"
-                android:layout_gravity="center_vertical"
-                style="@style/ControlBarCustomActionStyle"
-                android:layout_marginStart="@dimen/control_bar_media_card_custom_action_spacing"/>
-
-            <ImageButton
-                android:id="@+id/playback_action_id5"
-                android:layout_width="@dimen/control_bar_media_card_custom_action_size"
-                android:layout_height="@dimen/control_bar_media_card_custom_action_size"
-                android:layout_gravity="center_vertical"
-                style="@style/ControlBarCustomActionStyle"
-                android:layout_marginStart="@dimen/control_bar_media_card_custom_action_spacing"/>
-
-            <ImageButton
-                android:id="@+id/playback_action_id6"
-                android:layout_width="@dimen/control_bar_media_card_custom_action_size"
-                android:layout_height="@dimen/control_bar_media_card_custom_action_size"
-                android:layout_gravity="center_vertical"
-                style="@style/ControlBarCustomActionStyle"
-                android:layout_marginStart="@dimen/control_bar_media_card_custom_action_spacing"/>
-
-            <ImageButton
-                android:id="@+id/playback_action_id7"
-                android:layout_width="@dimen/control_bar_media_card_custom_action_size"
-                android:layout_height="@dimen/control_bar_media_card_custom_action_size"
-                android:layout_gravity="center_vertical"
-                style="@style/ControlBarCustomActionStyle"
-                android:layout_marginStart="@dimen/control_bar_media_card_custom_action_spacing"/>
-
-            <ImageButton
-                android:id="@+id/playback_action_id8"
-                android:layout_width="@dimen/control_bar_media_card_custom_action_size"
-                android:layout_height="@dimen/control_bar_media_card_custom_action_size"
-                android:layout_gravity="center_vertical"
-                style="@style/ControlBarCustomActionStyle"
-                android:layout_marginStart="@dimen/control_bar_media_card_custom_action_spacing"/>
-
-            <ImageButton
-                android:id="@+id/overflow_button"
-                android:layout_width="@dimen/control_bar_media_card_custom_action_size"
-                android:layout_height="@dimen/control_bar_media_card_custom_action_size"
-                android:layout_gravity="center_vertical"
-                style="@style/ControlBarOverflowButtonStyle"
-                android:layout_marginStart="@dimen/control_bar_media_card_custom_action_spacing"
-                android:src="@drawable/ic_overflow_horizontal" />
-        </LinearLayout>
-
-        <LinearLayout
-            android:id="@+id/custom_action_overflow_container"
-            android:layout_width="wrap_content"
-            android:layout_height="@dimen/media_card_large_button_size"
-            android:layout_marginEnd="@dimen/control_bar_media_card_view_end_margin"
-            android:layout_marginStart="@dimen/media_card_view_separation_margin"
-            android:paddingStart="@dimen/control_bar_media_card_custom_action_layout_horizontal_padding"
-            android:paddingEnd="@dimen/control_bar_media_card_custom_action_layout_horizontal_padding"
-            android:background="@drawable/pill_button_shape"
-            android:backgroundTint="@color/car_on_surface_variant"
-            android:visibility="gone"
-            app:layout_constraintBottom_toBottomOf="@id/play_pause_button"
-            app:layout_constraintStart_toEndOf="@id/playback_action_id2"
-            app:layout_constraintEnd_toStartOf="@id/queue_button"
-            app:layout_constraintTop_toTopOf="@id/play_pause_button"
-            app:layout_constraintHorizontal_bias="1">
-
-            <ImageButton
-                android:id="@+id/playback_action_id9"
-                android:layout_width="@dimen/control_bar_media_card_custom_action_size"
-                android:layout_height="@dimen/control_bar_media_card_custom_action_size"
-                android:layout_gravity="center_vertical"
-                style="@style/ControlBarCustomActionOverflowStyle"/>
-
-            <ImageButton
-                android:id="@+id/playback_action_id10"
-                android:layout_width="@dimen/control_bar_media_card_custom_action_size"
-                android:layout_height="@dimen/control_bar_media_card_custom_action_size"
-                android:layout_gravity="center_vertical"
-                style="@style/ControlBarCustomActionOverflowStyle"
-                android:layout_marginStart="@dimen/control_bar_media_card_custom_action_spacing" />
-
-            <ImageButton
-                android:id="@+id/playback_action_id11"
-                android:layout_width="@dimen/control_bar_media_card_custom_action_size"
-                android:layout_height="@dimen/control_bar_media_card_custom_action_size"
-                android:layout_gravity="center_vertical"
-                style="@style/ControlBarCustomActionOverflowStyle"
-                android:layout_marginStart="@dimen/control_bar_media_card_custom_action_spacing" />
-
-            <ImageButton
-                android:id="@+id/overflow_exit_button"
-                android:layout_width="@dimen/control_bar_media_card_custom_action_size"
-                android:layout_height="@dimen/control_bar_media_card_custom_action_size"
-                android:layout_gravity="center_vertical"
-                style="@style/ControlBarOverflowExitButtonStyle"
-                android:layout_marginStart="@dimen/control_bar_media_card_custom_action_spacing"
-                android:src="@drawable/ic_cancel" />
-        </LinearLayout>
 
         <SeekBar
             android:id="@+id/playback_seek_bar"
