--- a/car_product/car_ui_portrait/apps/CarUiPortraitLauncher/res/anim/media_card_overflow_close_animation.xml
+++ b/car_product/car_ui_portrait/apps/CarUiPortraitLauncher/res/anim/media_card_overflow_close_animation.xml
@@ -14,8 +14,9 @@
   ~ limitations under the License.
   -->
 
-<resources>
-    <!-- Control bar media card panel animation duration in ms -->
-    <integer name="control_bar_side_panel_animation_duration">400</integer>
-    <integer name="control_bar_media_card_overflow_animation_duration">200</integer>
-</resources>
+<translate xmlns:android="http://schemas.android.com/apk/res/android"
+    android:fillEnabled="true"
+    android:fillAfter="true"
+    android:duration="@integer/control_bar_media_card_overflow_animation_duration"
+    android:fromXDelta="-100%"
+    android:toXDelta="-20%" />
