--- a/car_product/car_ui_portrait/apps/CarUiPortraitLauncher/res/anim/media_card_overflow_fade_in.xml
+++ b/car_product/car_ui_portrait/apps/CarUiPortraitLauncher/res/anim/media_card_overflow_fade_in.xml
@@ -14,8 +14,7 @@
   ~ limitations under the License.
   -->
 
-<resources>
-    <!-- Control bar media card panel animation duration in ms -->
-    <integer name="control_bar_side_panel_animation_duration">400</integer>
-    <integer name="control_bar_media_card_overflow_animation_duration">200</integer>
-</resources>
+<alpha xmlns:android="http://schemas.android.com/apk/res/android"
+    android:duration="@integer/control_bar_media_card_overflow_animation_duration"
+    android:fromAlpha="0.0"
+    android:toAlpha="1.0" />
