--- a/car_product/car_ui_portrait/apps/CarUiPortraitLauncher/res/drawable/custom_action_overflow_conceal_background.xml
+++ b/car_product/car_ui_portrait/apps/CarUiPortraitLauncher/res/drawable/custom_action_overflow_conceal_background.xml
@@ -14,8 +14,14 @@
   ~ limitations under the License.
   -->
 
-<resources>
-    <!-- Control bar media card panel animation duration in ms -->
-    <integer name="control_bar_side_panel_animation_duration">400</integer>
-    <integer name="control_bar_media_card_overflow_animation_duration">200</integer>
-</resources>
+<vector xmlns:android="http://schemas.android.com/apk/res/android"
+    android:height="80dp"
+    android:viewportHeight="67.95"
+    android:viewportWidth="344.26"
+    android:width="405.30978dp">
+
+    <path
+        android:fillColor="@color/car_surface_container_high"
+        android:pathData="M0,0L344.26,0L344.26,0.05C325.58,0.46 310.57,15.43 310.57,33.85C310.57,
+        52.26 325.58,67.24 344.26,67.64L344.26,67.95L0,67.95Z" />
+</vector>
