Fix cutoff buttons for IntentResolver with default
Bug: 348501568
Test: Manual
Flag: Flag: EXEMPT bugfix

Change-Id: Idcbb638f31ca6f122e6ea8f671e11e01ad541ba2

--- a/packages/CarActivityResolver/res/values/dimens.xml
+++ b/packages/CarActivityResolver/res/values/dimens.xml
@@ -17,5 +17,8 @@
 -->
 <resources>
     <dimen name="background_blur_radius">14dp</dimen>
+
+    <!-- These values are copied from the framework so they may be referenced in this app -->
+    <dimen name="resolver_list_item_height">@*android:dimen/car_activity_resolver_list_item_height</dimen>
     <dimen name="resolver_list_max_height">@*android:dimen/car_activity_resolver_list_max_height</dimen>
 </resources>
