--- a/car_product/distant_display/rro/DriverUiRRO/res/values/config.xml
+++ b/car_product/distant_display/rro/DriverUiRRO/res/values/config.xml
@@ -20,7 +20,7 @@
     <string name="figma_doc">a1f1PP0ZdKDWSDif9ZHLml</string>
 
     <string-array name="initial_app_cards">
-        <item>com.example.appcard.sampleapplication : com.example.appcard.sampleapplication : clockAppCard</item>
+        <item>com.example.appcard.sample.weather : com.example.appcard.sample.weather : sampleWeatherAppCard</item>
         <item>com.example.appcard.sample.media : com.example.appcard.sample.media : mediaAppCard</item>
         <item>com.example.appcard.sampleapplication : com.example.appcard.sampleapplication : calendarAppCard</item>
     </string-array>
