--- a/car_product/distant_display/apps/CarDistantDisplaySystemUI/res/values/config.xml
+++ b/car_product/distant_display/apps/CarDistantDisplaySystemUI/res/values/config.xml
@@ -43,6 +43,7 @@
         <item>com.android.car.carlauncher/com.android.car.carlauncher.AppGridActivity</item>
         <item>com.android.car.settings/com.android.car.settings.FallbackHome</item>
         <item>com.google.android.apps.maps/com.google.android.maps.LimitedMapsActivity</item>
+        <item>com.google.android.apps.maps/com.google.android.apps.gmm.car.embedded.activity.LimitedMapsActivity</item>
         <item>com.android.car.mapsplaceholder/com.android.car.mapsplaceholder.MapsPlaceholderActivity</item>
         <item>com.android.systemui/com.android.systemui.car.activity.ActivityBlockingActivity</item>
     </string-array>
