Renew distant display allowlist app
Maps activity from tm prebuilt Maps was not allowlisted. Due to this,
distant display button wad displayed in home screen.

Bug: 349210343
Test: build and launch sdk_gcar_dd emulator
Flag: EXEMPT bugfix

Change-Id: I3ff149fc001117e6171ba4e125a966c622ed8476
Merged-In: Id9eb83170e65473376df881f40823a451713433f

--- a/car_product/distant_display/apps/CarDistantDisplaySystemUI/res/values/config.xml
+++ b/car_product/distant_display/apps/CarDistantDisplaySystemUI/res/values/config.xml
@@ -31,6 +31,7 @@
         <item>com.android.car.settings/com.android.car.settings.FallbackHome</item>
         <item>com.android.car.driverui/com.android.car.driverui.MainActivity</item>
         <item>com.google.android.apps.maps/com.google.android.maps.LimitedMapsActivity</item>
+        <item>com.google.android.apps.maps/com.google.android.apps.gmm.car.embedded.activity.LimitedMapsActivity</item>
         <item>com.android.car.mapsplaceholder/com.android.car.mapsplaceholder.MapsPlaceholderActivity</item>
         <item>com.android.systemui/com.android.systemui.car.wm.activity.ActivityBlockingActivity</item>
         <item>com.android.car.media/com.android.car.media.MediaActivity</item>
