Remove PassengerLauncher priv-permissions.
 - Since default CarLauncher handles both usecases for Driver and Passenger
   for MUMD.
 - Remove PassengerLauncher and its priv-permissions from
   the platform.
 - Set active component as CarLauncher for Home button in PassengerSystemUI
   overlay.

Bug: 351855155
Test: Manual
Flag: EXEMPT bugfix

Change-Id: I545b66ba1a39fe62bdbd5bd20b0e927097b0d9f9

--- a/car_product/rro/CarSystemUIPassengerRRO/res/layout/car_passenger_bottom_system_bar.xml
+++ b/car_product/rro/CarSystemUIPassengerRRO/res/layout/car_passenger_bottom_system_bar.xml
@@ -60,7 +60,7 @@
                 android:id="@+id/home"
                 android:contentDescription="@string/system_bar_passenger_home_label"
                 style="@style/SystemBarButton"
-                systemui:componentNames="com.android.car.multidisplay.passenger/.LauncherActivity"
+                systemui:componentNames="com.android.car.carlauncher/.CarLauncher"
                 systemui:highlightWhenSelected="true"
                 systemui:icon="@drawable/car_ic_home"
                 systemui:intent="intent:#Intent;action=android.intent.action.MAIN;category=android.intent.category.HOME;launchFlags=0x14000000;end"/>
