--- a/car_product/distant_display/apps/CarDistantDisplaySystemUI/res/layout/car_top_system_bar_dock.xml
+++ b/car_product/distant_display/apps/CarDistantDisplaySystemUI/res/layout/car_top_system_bar_dock.xml
@@ -68,7 +68,7 @@
             android:layout_height="match_parent"
             style="@style/TopBarButton"
             android:layout_toLeftOf="@id/distant_display_nav_container"
-            systemui:longIntent="intent:#Intent;action=com.android.car.bugreport.action.START_AUDIO_FIRST;component=com.android.car.bugreport/.BugReportActivity;end">
+            systemui:longIntent="intent:#Intent;action=com.android.car.bugreport.action.START_BUG_REPORT;end">
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
