--- a/packages/CarActivityResolver/res/layout/resolver_list.xml
+++ b/packages/CarActivityResolver/res/layout/resolver_list.xml
@@ -30,7 +30,13 @@
         android:layout_gravity="center"
         android:id="@*android:id/contentPanel">
 
+        <View android:id="@+id/top_spacer"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:background="@android:color/transparent" />
+
         <LinearLayout
+            android:id="@+id/activity_resolver_content"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
